# LLMTrading

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGELOG_FIXES.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  README.md  baslat.bat  cli.py  docker-compose.yml  git_diff.txt  git_diff_utf8.txt  kurulum.bat  patch_pyproject.py  pyproject.toml  pytest.ini  pytest_out.txt  requirements.txt  start_live.bat  start_paper.bat  start_paper.sh  test_gpt_oss.py  test_report.txt  verify_fixes.py
.github/: PULL_REQUEST_TEMPLATE.md
agents/: __init__.py  coordinator.py  debate.py  ensemble_voter.py  graph.py  lead_scout.py  portfolio_manager.py  prompt_evolver.py  research_analyst.py  retrospective_agent.py  risk_manager.py  rl_advisor.py  rl_environment.py  state.py  trader.py
backtest/: __init__.py  backtest_cache.py  historical_news.py  llm_backtest.py  walk_forward.py
config/: __init__.py  constants.py  settings.py  trading_params.yaml
dashboard/: app.js  index.html  server.py  style.css
data/: __init__.py  agent_memory.py  fallback_store.py  fear_greed.py  market_data.py  market_hours.py  news_data.py  portfolio_state.json  scanner.py  sentiment_store.py  symbol_resolver.py  vector_store.py
docs/: AGENTS.md  ARCHITECTURE.md  DASHBOARD_STATUS.md  DEPLOYMENT_GUIDE.md  DRIFT_MONITOR.md  INDEX.md  LOCK_ORDERING_GUIDE.md  PROMPT_EVOLVER.md  RAG_MEMORY.md  RISK_MANAGEMENT.md  RL_ADVISOR.md
evaluation/: drift_monitor.py
execution/: __init__.py  account_manager.py  exchange_client.py  order_manager.py  paper_engine.py  sync_manager.py
models/: __init__.py  llm_fallback.py  orderbook_analyzer.py  schemas.py  sentiment_analyzer.py  technical_analyzer.py
monitoring/: grafana-dashboard.json  prometheus.yml
risk/: __init__.py  circuit_breaker.py  correlation_checker.py  cvar_optimizer.py  portfolio.py  regime_filter.py  stop_loss.py  system_status.py  watchdog.py
scripts/: health_check.py  run_backtest.py  (+10 more)
(+48 files in other folders)
