[project]
name = "llmtrading"
version = "1.0.0"
description = "Aegis Intelligence Terminal: A Multi-Agent Autonomous Trading System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aegis Team", email = "info@aegis.ai"}
]
keywords = ["trading", "llm", "ai", "langgraph", "crypto", "stock"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "yfinance>=0.2.40",
    "ccxt>=4.4.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "scipy>=1.14.0",
    "scikit-learn>=1.4.0",
    "chromadb>=0.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tzdata>=2024.1",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[project.scripts]
aegis = "cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk*", "data*", "agents*", "assets*", "config*", "models*", "backtest*", "execution*", "dashboard*", "evaluation*", "monitoring*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
